# httpautomate

./: Cargo.toml  README.md
examples/: post.http  test.http
src/: errors.rs  execute.rs  http_file_parser.rs  http_request.rs  http_request_executor.rs  lib.rs  main.rs
src/rhai/: init_scope.rhai
