[package]
name = "httpautomate"
version = "0.1.0"
authors = ["Florian Roks"]
description = "http automate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
clap = { version = "4.0.23", features = ["cargo"] }
reqwest = { version = "0.11.12", features = ["default-tls", "cookies", "blocking", "json", "gzip", "brotli", "deflate"] }
test-case = "2.2.2"
