[package]
name = "httpautomate"
version = "0.1.0"
authors = ["Florian Roks"]
description = "http automate"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", default-features = false }
clap = { version = "4.0.23", features = ["cargo"] }
reqwest = { version = "0.11.12", features = ["default-tls", "cookies", "blocking", "json", "gzip", "brotli", "deflate"] }
rhai = { version = "1.11.0" }
test-case = "2.2.2"
regex = "1.7.0"
uuid = { version = "1.2.2", features = ["v4"] }
rand = "0.8.5"
serde_json = "1.0.89"
chrono = "0.4.23"
